[build-system]
requires = ["scikit-build-core>=0.7"]
build-backend = "scikit_build_core.build"

[project]
name = "volmc"
version = "0.1.0"
requires-python = ">=3.9"

[project.optional-dependencies]
test = ["numpy", "scipy"]

[tool.scikit-build]
cmake.minimum-version = "3.16"
cmake.build-type = "Release"
cmake.define = { VOLMC_BUILD_TESTS = "ON" }
wheel.packages = ["volmc"]